    @startuml
skinparam classAttributeIconSize 0

abstract class Pessoa{
-nome: String
-cpf: String
-moedas: int
-int:consultarSaldo(Pessoa:pessoa)
}

class Aluno extends Pessoa{
-id:Long
-email.: String
-rg: String
-endereco: Endereco
-curso:Curso
-void:cadastrar(Aluno:aluno)
-Transacao:trocarMoedas(Vantagem:vantagem)
}

class Professor extends Pessoa{
-id:Long
-departamento: Departamento
-int:encrementarMoedas(int:Valor)
-Aluno:destribuirMoedas(Aluno:aluno, int:Valor, String:Motivo)
-void:notificarAluno(Aluno:aluno)
-Transacao:visualisarTransacoes(Professor:professor)
-Transacao:gerarTransacao(Aluno:aluno,Professor:professor)
}

class Endereco{
-id:Long
-CEP:String
-numero:int
-complemento:String
}

class Instituicao{
-id:Long
-nome: String
}

class Departamento{
-id:Long
-nome:String
-instituicao: Instituicao
}

class Curso{
-id:Long
-nome:String
-instituicao: Instituicao
}

class TransacaoProfessor extends Transacao{
-id:Long
-descricao: String
-professor: Professor
}

class TransacaoTroca extends Transacao{
-id:Long
-vantagem: Vantagem
}

abstract class Transacao{
-aluno: Aluno
-moedas: int
-dt_Transacao: LocalDateTime
}

class Vantagem{
id:Long
nome:String
descricao:String
moedas: int
foto:String
Empresa:Empresa
}

class Empresa{
id:Long
nome:String
void : cadastrarVantagem(Vantagem:vantagem)
}


Aluno -- Transacao
Aluno -- Endereco
Empresa -- Vantagem
Professor -- Departamento
Professor -- TransacaoProfessor
Departamento -- Instituicao
Curso -- Instituicao
Vantagem -- TransacaoTroca



@enduml